--- a/src/app/dash-board/masters/machinemaster/machinemaster.component.html
+++ b/src/app/dash-board/masters/machinemaster/machinemaster.component.html
@@ -17,21 +17,29 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-3">
+                <div class="col-xs-3 form-group">
                     <div class="form-group">
-                        <h4>Status</h4>
+                        <label path="status" for="status">Status</label>
+                        <br>
                         <label class="switch">
-                            <input type="checkbox" formControlName="status" checked>
-                            <span class="slider round"></span>
+                            <input type="checkbox" formControlName="status" name="status">
+                            <div class="slider round">
+                            </div>
                         </label>
+                    </div>
+                </div>
+                <!-- <div class="col-xs-3 form-group">
+                    <div class="form-group">
+                        <label>Status</label>
+                        <div class="switch">
+                            <input type="checkbox" formControlName="status" checked>
+                        </div>
                         <div *ngIf="submitted && f.status.errors" class="invalid-feedback">
                             <div *ngIf="f.status.errors.required">Status is required</div>
                         </div>
-
                     </div>
-                </div>
+                </div> -->
             </div>
-            <!-- <mat-slide-toggle>Status</mat-slide-toggle> -->
             <div class="row">
                 <div class="col-sm-12 ">
                     <div class="form-group text-right">
