--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,7 +32,7 @@
                         <div *ngIf="f.password.errors.required">Password is required</div>
                     </div>
 
-                    <select class="select wrap-input100 validate-input" formControlName="domain" required
+                    <!-- <select class="select wrap-input100 validate-input" formControlName="domain" required
                         [ngClass]="{ 'is-invalid': submitted && f.domain.errors }">
                         <option value="null">SelectDomain</option>
                         <option value="Manufacturing">Manufacturing</option>
@@ -43,7 +43,7 @@
                     </select>
                     <div *ngIf="submitted && f.domain.errors" class="invalid-feedback">
                         <div *ngIf="f.domain.errors.required">Domain is required</div>
-                    </div>
+                    </div> -->
 
                     <div class="container-login100-form-btn p-t-50 ">
                         <div class="wrap-login100-form-btn">
