--- a/src/app/user-registration/user-registration.component.html
+++ b/src/app/user-registration/user-registration.component.html
@@ -73,9 +73,8 @@
                                     </div>
 
                                     <div class="row col-md-12 col-lg-12 col-sm-12 textset3">
-                                        <div class="row col-md-6 col-sm-6 col-lg-6 passname">
+                                        <!-- <div class="row col-md-6 col-sm-6 col-lg-6 passname">
                                             <div class="form-group">
-                                                <!-- <label for="domain">Domain</label> -->
                                                 <input class="form-control" path="domain" type="hidden" />
                                                 <select formControlName="domain" class="form-control-arrow" name="domain"
                                                     id="domain"
@@ -86,15 +85,13 @@
                                                         [value]="system.description">
                                                         {{system.description}}
                                                     </option>
-                                                    <!-- <option *ngFor="let system of dsystemproperties" [value]="system.description">
-                                                        {{system.description}}
-                                                    </option> -->
+                                                   
                                                 </select>
                                             </div>
                                             <div *ngIf="submitted && f.domain.errors" class="invalid-feedback">
                                                 <div *ngIf="f.domain.errors.required">Domain is required</div>
                                             </div>
-                                        </div>
+                                        </div> -->
 
                                         <div class="row col-md-6 col-sm-6 col-lg-6 cname">
 
