--- a/src/app/dash-board/booking/appointment/time/time.component.css
+++ b/src/app/dash-board/booking/appointment/time/time.component.css
@@ -24,3 +24,9 @@ select {
     -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+
+::ng-eep .btn {
+    /* position: absolute; */
+    background-color: transparent !important;
+    /* color: white; */
+}
