--- a/src/app/dash-board/booking/calendar-table/calendar-table.component.html
+++ b/src/app/dash-board/booking/calendar-table/calendar-table.component.html
@@ -6,7 +6,7 @@
         Previous
       </div>
       <div class="btn btn-outline-secondary" mwlCalendarToday [(viewDate)]="viewDate">
-        Today
+        This
       </div>
       <div class="btn btn-primary" mwlCalendarNextView [view]="view" [(viewDate)]="viewDate"
         (viewDateChange)="closeOpenMonthViewDay()">
