--- a/src/app/dash-board/side-menu/side-menu.component.html
+++ b/src/app/dash-board/side-menu/side-menu.component.html
@@ -25,7 +25,7 @@
                                                 <span><i class="fa fa-cogs"
                                                         [ngClass]="childMenuString == 'Machinemaster' ? 'is-active' : ''"></i></span>
                                                 <a><span
-                                                        [ngClass]="childMenuString == 'Machinemaster' ? 'is-active' : ''">Machine
+                                                        [ngClass]="childMenuString == 'Machinemaster' ? 'is-active' : ''">Executive
                                                     </span></a>
                                             </li>
                                         </ul>
