--- a/src/app/dash-board/booking/appointment/bookingmanagement/bookingmanagement.component.css
+++ b/src/app/dash-board/booking/appointment/bookingmanagement/bookingmanagement.component.css
@@ -1,7 +1,7 @@
 .date-list {
     background-color: #1c4365 !important;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !important;
     color: #fff !important;
 }
 
@@ -14,4 +14,9 @@
     color: #fff !important;
     font-weight: 900;
     float: right;
+}
+
+::ng-deep .modal-dialog {
+    width: 650px !important;
+    margin: 30px auto;
 }
