--- a/src/app/dash-board/masters/machinemaster/machinemaster.component.html
+++ b/src/app/dash-board/masters/machinemaster/machinemaster.component.html
@@ -1,46 +1,35 @@
 <fieldset class="scheduler-border">
-    <legend class="scheduler-border">Machine Master</legend>
+    <legend class="scheduler-border">Executive</legend>
     <div class="formData">
         <form [formGroup]="machineForm" (ngSubmit)="onUserClick($event, machineForm)">
             <div class="row">
                 <div class="col-xs-3 col-sm-3 ">
                     <div class="form-group">
                         <label path="machinename" for="machinename" cssClass="required">
-                            Machine Name</label>
+                           Executive</label>
                         <input formControlName="machinename" class="form-control"
                             [ngClass]="{ 'is-invalid': submitted && f.machinename.errors }" />
                         <div *ngIf="submitted && f.machinename.errors" class="invalid-feedback">
-                            <div *ngIf="f.machinename.errors.required">Machine Name is required
+                            <div *ngIf="f.machinename.errors.required">Executive is required
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-3 form-group">
+                <div class="col-xs-3">
                     <div class="form-group">
                         <label path="status" for="status">Status</label>
                         <br>
                         <label class="switch">
-                            <input type="checkbox" formControlName="status" name="status">
-                            <div class="slider round">
-                            </div>
+                            <input type="checkbox" formControlName="status" name="status" checked>
+                            <span class="slider round"></span>
                         </label>
                     </div>
                 </div>
-                <!-- <div class="col-xs-3 form-group">
-                    <div class="form-group">
-                        <label>Status</label>
-                        <div class="switch">
-                            <input type="checkbox" formControlName="status" checked>
-                        </div>
-                        <div *ngIf="submitted && f.status.errors" class="invalid-feedback">
-                            <div *ngIf="f.status.errors.required">Status is required</div>
-                        </div>
-                    </div>
-                </div> -->
             </div>
             <div class="row">
+                
                 <div class="col-sm-12 ">
                     <div class="form-group text-right">
                         <button type="submit" class="btn btn-primary mr-2">
@@ -57,7 +46,7 @@
 </fieldset>
 
 <fieldset class="scheduler-border">
-    <legend class="scheduler-border">Machine Master</legend>
+    <legend class="scheduler-border">Executive</legend>
     <ag-grid-angular #agGrid class="ag-theme-balham" [gridOptions]="gridOptions" style="width: 100%; height: 350px;"
         [pagination]="true" [frameworkComponents]="frameworkComponents">
     </ag-grid-angular>
