--- a/src/assets/css/common/styles.css
+++ b/src/assets/css/common/styles.css
@@ -152,6 +152,7 @@ header .header-container .dropdown .dropdown-menu::before {
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(360deg);
     }
@@ -165,6 +166,7 @@ header .header-container .dropdown .dropdown-menu::before {
     from {
         transform: rotate(360deg);
     }
+
     to {
         transform: rotate(0deg);
     }
@@ -843,40 +845,49 @@ li a span {
     .sample {
         width: 60em !important;
     }
+
     .sample-stksetting {
         width: 120em !important;
     }
+
     .sample-ledger,
     .sample-balance,
     .sample-project {
         width: 180em !important;
     }
+
     .sample-deltrend,
     .sample-recpttrend {
         width: 140em !important;
     }
+
     .sample-orditm,
     .sample-puritm {
         width: 120em !important;
     }
+
     .sample-setup,
     .sample-cusdet,
     .sample-crmcus {
         width: 100em !important;
     }
+
     .sample-tax,
     .sample-budget,
     .sample-sales,
     .sample-lead {
         width: 80em !important;
     }
+
     .sample-oflet,
     .sample-offlet {
         width: 120em !important;
     }
+
     .sample-loss {
         width: 90em !important;
     }
+
     .sample-issued,
     .sample-gross,
     .sample-payable,
@@ -889,49 +900,63 @@ li a span {
     .sample-quottrends {
         width: 130em !important;
     }
+
     .sample-profit,
     .sample-supqot {
         width: 80em !important;
     }
+
     .sample-empy {
         width: 40em !important;
     }
+
     .sample-group {
         width: 40em !important;
     }
+
     .sample-branch {
         width: 30em !important;
     }
+
     .sample-leave,
     .sample-sales {
         width: 120em !important;
     }
+
     .sample-attendance {
         width: 170em !important;
     }
+
     .sample-budvar,
     .sample-cheque,
     .sample-attendance {
         width: 220em !important;
     }
+
     .scrollbar {
         overflow: auto;
     }
+
     h2 {
         margin-left: -15px !important;
     }
+
     .header li {
         display: none;
     }
+
     .header {
         padding: 5px 0;
     }
+
     .col-xs-3 {
         width: 100%;
     }
+
     .col-xs-6 {
         width: 100%;
     }
+
     /* .col-sm-12 {
         width: 100%;
     } */
@@ -939,6 +964,7 @@ li a span {
         padding: 8px 18px !important;
         width: 100%;
     }
+
     .mat-menu {
         display: none !important;
     }
@@ -948,6 +974,7 @@ li a span {
 /* MOBILE VIEW */
 
 @media (max-width: 640px) {
+
     /* sidemenu mobile view */
     .side_menu1 {
         position: fixed;
@@ -963,6 +990,7 @@ li a span {
         transition: 1500ms linear;
         overflow: auto;
     }
+
     .side_menu2 {
         position: fixed;
         z-index: 999;
@@ -977,6 +1005,7 @@ li a span {
         transition: 1500ms linear;
         overflow: auto;
     }
+
     .content {
         margin-left: 0px !important;
         top: 9px;
@@ -985,56 +1014,71 @@ li a span {
         padding-top: 7px;
         font-family: inherit !important;
     }
+
     .field {
         margin-left: 130px !important;
         margin-top: -31px !important;
     }
+
     .closed {
         margin-left: 292px;
         top: -37px !important;
     }
+
     .modal-header {
         padding: 0px !important;
     }
+
     .btn-group>.btn:first-child {
         margin-left: -90px !important;
         float: left !important;
     }
+
     .sample {
         width: 60em !important;
     }
+
     .sample-empy {
         width: 40em !important;
     }
+
     .sample-stksetting {
         width: 120em !important;
     }
+
     .sample-loss {
         width: 90em !important;
     }
+
     .sample-deltrend,
     .sample-recpttrend {
         width: 140em !important;
     }
+
     .sample-ledger,
     .sample-balance,
     .sample-project {
         width: 180em !important;
     }
+
     .sample-orditm,
     .sample-puritm {
         width: 120em !important;
     }
+
     .sample-group {
         width: 40em !important;
     }
+
     .sample-setup,
     .sample-crmcus {
         width: 100em !important;
     }
+
     .sample-branch {
         width: 30em !important;
     }
+
     .sample-issued,
     .sample-purreg,
     .sample-item,
@@ -1042,6 +1086,7 @@ li a span {
     .sample-quottrends {
         width: 130em !important;
     }
+
     .sample-profit,
     .sample-tax,
     .sample-budget,
@@ -1049,296 +1094,374 @@ li a span {
     .sample-sales {
         width: 80em !important;
     }
+
     .sample-budvar,
     .sample-cheque,
     .sample-attendance {
         width: 220em !important;
     }
+
     .sample-leave,
     .sample-sales {
         width: 120em !important;
     }
+
     .sample-oflet,
     .sample-offlet {
         width: 120em !important;
     }
+
     .sample-attendance {
         width: 170em !important;
     }
+
     .scrollbar {
         overflow: auto;
     }
+
     #datePicker {
         z-index: -1;
     }
+
     .mobile {
         display: block !important;
     }
+
     .product+* .cdk-overlay-pane {
         top: 75px !important;
         left: 73px !important;
     }
+
     .bommaterial+* .cdk-overlay-pane {
         top: 150px !important;
         left: 73px !important;
     }
+
     .manutools+* .cdk-overlay-pane {
         top: 170px !important;
         left: 73px !important;
     }
+
     .setup+* .cdk-overlay-pane {
         top: 200px !important;
         left: 73px !important;
     }
+
     .report+* .cdk-overlay-pane {
         top: 210px !important;
         left: 73px !important;
     }
+
     .salesInvoice+* .cdk-overlay-pane {
         top: 200px !important;
         left: 73px !important;
         width: 10em;
     }
+
     .master+* .cdk-overlay-pane {
         top: 250px !important;
         left: 73px !important;
     }
+
     .accout+* .cdk-overlay-pane {
         top: 280px !important;
         left: 73px !important;
     }
+
     .bankpay+* .cdk-overlay-pane {
         top: 310px !important;
         left: 73px !important;
     }
+
     .taxes+* .cdk-overlay-pane {
         top: 330px !important;
         left: 73px !important;
     }
+
     .budget+* .cdk-overlay-pane {
         top: 360px !important;
         left: 73px !important;
     }
+
     .tools+* .cdk-overlay-pane {
         top: 400px !important;
         left: 73px !important;
     }
+
     .bill+* .cdk-overlay-pane {
         top: 450px !important;
         left: 73px !important;
     }
+
     .analytics+* .cdk-overlay-pane {
         top: 470px !important;
         left: 73px !important;
     }
+
     .purchasing+* .cdk-overlay-pane {
         top: 270px !important;
         left: 73px !important;
     }
+
     .supplier+* .cdk-overlay-pane {
         top: 290px !important;
         left: 73px !important;
     }
+
     .itempricing+* .cdk-overlay-pane {
         top: 200px !important;
         left: 73px !important;
     }
+
     .analyticss+* .cdk-overlay-pane {
         top: 325px !important;
         left: 73px !important;
     }
+
     .otherreports+* .cdk-overlay-pane {
         top: 350px !important;
         left: 73px !important;
     }
+
     .sellanaly+* .cdk-overlay-pane {
         top: 450px !important;
         left: 73px !important;
     }
+
     .itemprice+* .cdk-overlay-pane {
         top: 200px !important;
         left: 73px !important;
     }
+
     .sale+* .cdk-overlay-pane {
         top: 305px !important;
         left: 73px !important;
     }
+
     .customer+* .cdk-overlay-pane {
         top: 305px !important;
         left: 73px !important;
     }
+
     .salsept+* .cdk-overlay-pane {
         top: 335px !important;
         left: 73px !important;
     }
+
     .Report+* .cdk-overlay-pane {
         top: 473px !important;
         left: 73px !important;
         width: 10em;
     }
+
     .Employee+* .cdk-overlay-pane {
         top: 355px !important;
         left: 73px !important;
     }
+
     .Holiday+* .cdk-overlay-pane {
         top: 450px !important;
         left: 73px !important;
     }
+
     .reports+* .cdk-overlay-pane {
         top: 200px !important;
         left: 73px !important;
     }
+
     .PayRoll+* .cdk-overlay-pane {
         top: 485px !important;
         left: 73px !important;
     }
+
     .ExpenseClaims+* .cdk-overlay-pane {
         top: 513px !important;
         left: 73px !important;
     }
+
     .Appraisals+* .cdk-overlay-pane {
         top: 540px !important;
         left: 73px !important;
     }
+
     .SetUp+* .cdk-overlay-pane {
         top: 567px !important;
         left: 73px !important;
     }
+
     .recruit+* .cdk-overlay-pane {
         top: 275px !important;
         left: 73px !important;
     }
+
     .crmreports+* .cdk-overlay-pane {
         left: 73px !important;
         top: 480px !important;
     }
+
     .crmsetup+* .cdk-overlay-pane {
         left: 73px !important;
         top: 480px !important;
     }
+
     .project+* .cdk-overlay-pane {
         top: 350 !important;
         left: 73px !important;
     }
+
     .timetracking+* .cdk-overlay-pane {
         top: 375 !important;
         left: 73px !important;
     }
+
     .stktrans+* .cdk-overlay-pane {
         top: 400 !important;
         left: 73px !important;
     }
+
     .StockReports+* .cdk-overlay-pane {
         top: 330px !important;
         left: 73px !important;
     }
+
     .ItemsPricing+* .cdk-overlay-pane {
         top: 360px !important;
         left: 73px !important;
     }
+
     .tools+* .cdk-overlay-pane {
         top: 385px !important;
         left: 73px !important;
     }
+
     .stksetup+* .cdk-overlay-pane {
         top: 200px !important;
         left: 73px !important;
     }
+
     .stkanalytic+* .cdk-overlay-pane {
         top: 450px !important;
         left: 73px !important;
     }
+
     .stkreport+* .cdk-overlay-pane {
         top: 250px !important;
         left: 73px !important;
     }
+
     .SalesPipeline+* .cdk-overlay-pane {
         top: 430px !important;
         left: 73px !important;
     }
+
     .suppissue+* .cdk-overlay-pane {
         top: 320px !important;
         left: 73px !important;
     }
+
     .tool+* .cdk-overlay-pane {
         top: 320px !important;
         left: 73px !important;
     }
+
     .suppreport+* .cdk-overlay-pane {
         top: 320px !important;
         left: 73px !important;
     }
+
     .itmreport+* .cdk-overlay-pane {
         top: 320px !important;
         left: 73px !important;
     }
+
     .lead1+* .cdk-overlay-pane {
         top: 440px !important;
         left: 73px !important;
     }
+
     .items+* .cdk-overlay-pane {
         top: 400px !important;
         left: 73px !important;
     }
+
     .cust+* .cdk-overlay-pane {
         top: 550 !important;
         left: 73px !important;
     }
+
     .custrpt+* .cdk-overlay-pane {
         top: 500 !important;
         left: 73px !important;
     }
+
     h2 {
         margin-left: -7px !important;
     }
+
     .nav-tabs {
         display: none;
     }
+
     .tab-content {
         display: none !important;
     }
+
     .web {
         display: none !important;
     }
+
     .manu-breadcrumb {
         display: none;
     }
+
     .select {
         padding: 8px 18px !important;
         width: 100%;
     }
+
     .loginContainer .form-control {
         font-size: 14px !important;
+
     }
+
     .btn-primary {
         font-size: 10px !important;
         float: right;
     }
+
     .btn-warning {
         font-size: 10px !important;
         float: left;
     }
+
     .col-xs-3 {
         width: 100%;
     }
+
     .col-xs-6 {
         width: 100%;
     }
+
     .col-sm-12 {
         width: 100%;
     }
+
     .dataView {
         margin-left: 10px !important;
     }
+
     .caret {
         display: none;
     }
+
     .panel-body ul {
         display: none;
     }
+
     .side-menu {
         width: 100%;
     }
+
     .side-menu a i {
         display: block;
         line-height: 50px;
@@ -1346,6 +1469,7 @@ li a span {
         margin-left: 0;
         font-size: 25px;
     }
+
     .panel-body ul li i {
         font-size: 20px;
         display: inherit;
@@ -1353,31 +1477,39 @@ li a span {
         text-align: center;
         color: var(--color_l1);
     }
+
     .side-menu li a span {
         display: none;
     }
+
     .side-menu .panel-body ul a span {
         display: none;
     }
+
     .side-menu .navbar-nav {
         display: block;
     }
+
     .header ul {
         display: none;
     }
+
     .side-menu .navbar-nav li {
         display: block;
     }
+
     .menu-bar {
         margin-top: 0px;
         display: none;
         display: block;
     }
+
     .side-menu #dropdown .panel-body .navbar-nav li:before {
         display: none;
         font-size: inherit;
         padding-right: 16px;
     }
+
     .side-menu #dropdown .panel-body .navbar-nav li {
         height: 25px;
     }
@@ -1430,7 +1562,7 @@ body::-webkit-validation-bubble-arrow:increment {
     min-height: inherit;
     margin-left: 75px !important;
     overflow-x: inherit;
-    bottom: 58px;
+    bottom: 30px;
     left: 0px;
     right: 0px;
     transition: 1500ms linear;
@@ -1463,6 +1595,7 @@ body::-webkit-validation-bubble-arrow:increment {
         transition: 1500ms linear;
         overflow: auto;
     }
+
     .dataView1 {
         position: absolute;
         top: 58px;
@@ -1492,10 +1625,10 @@ body::-webkit-validation-bubble-arrow:increment {
     border: none;
 }
 
- .reset {
+.reset {
     /* right: 15px ; */
-    margin-top: 1px ;
-    border: none ;
+    margin-top: 1px;
+    border: none;
     /* all: inherit  !important;; */
 }
 
@@ -1690,6 +1823,8 @@ td {
 .form-control,
 .btn-primary {
     font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    /* color: white; */
 }
 
 .panel-info>.panel-heading {
@@ -1911,10 +2046,3 @@ label {
     color: white;
     padding-right: 5px;
 }
-
-
-
-
-
-
- 
